--- a/src/pages/create/index.wxss
+++ b/src/pages/create/index.wxss
@@ -5,55 +5,64 @@
 }
 
 .form {
-  margin-bottom: 40rpx;
   background: #fff;
   border-radius: 12rpx;
-  padding: 20rpx;
+  padding: 30rpx;
+  margin-bottom: 40rpx;
 }
 
 .form-item {
-  padding: 20rpx;
-  border-bottom: 1px solid #ebedf0;
+  margin-bottom: 20rpx;
 }
 
 .form-label {
-  display: block;
-  margin-bottom: 10rpx;
   font-size: 28rpx;
-  color: #646566;
+  color: #333;
+  margin-bottom: 16rpx;
+  display: block;
 }
 
 .form-input {
   width: 100%;
-  height: 64rpx;
-  padding: 0 16rpx;
-  background: #f7f8fa;
+  height: 80rpx;
+  border: 2rpx solid #eee;
   border-radius: 8rpx;
+  padding: 0 20rpx;
   font-size: 28rpx;
 }
 
 .action-buttons {
-  margin: 40rpx 0;
+  padding: 40rpx;
 }
 
 .word-list {
-  margin-top: 40rpx;
   background: #fff;
   border-radius: 12rpx;
-  padding: 20rpx;
+  padding: 30rpx;
+  margin-top: 40rpx;
 }
 
-.word-list-title {
+.section-title {
   font-size: 32rpx;
-  color: #323233;
-  padding: 20rpx;
-  border-bottom: 1px solid #ebedf0;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 30rpx;
 }
 
 .word-item {
-  margin: 20rpx 0;
+  margin-bottom: 30rpx;
 }
 
-.submit-button {
-  margin-top: 40rpx;
-} 
+.word-form {
+  display: flex;
+  gap: 20rpx;
+}
+
+.word-input {
+  flex: 1;
+  height: 80rpx;
+  border: 2rpx solid #eee;
+  border-radius: 8rpx;
+  padding: 0 20rpx;
+  font-size: 28rpx;
+}
